# django-virtualqueryset

./: ARCHITECTURE.md  dev.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: assistant-guidelines.md
docs/: AI.md  README.md  development.md  purpose.md  structure.md
src/virtualqueryset/: __init__.py  models.py
src/virtualqueryset/queryset/: api.py  base.py  cached.py  json_qs.py
tests/: __init__.py  settings.py  test_base_queryset.py  urls.py
virtualqueryset/: __init__.py  admin.py  apps.py  managers.py
virtualqueryset/queryset/: __init__.py  base.py  config.py
