[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-virtualqueryset"
version = "0.1.0"
description = "Django library for QuerySet-like objects not backed by a database"
readme = "README.md"
authors = [{ name = "Charl", email = "charl@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.5",
    "ruff>=0.5",
    "mypy>=1.0",
    "django-stubs>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-virtualqueryset"

[tool.setuptools.packages.find]
where = ["."]
include = ["virtualqueryset*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
line-length = 100
target-version = "py310"

